--- a/configuration/application.conf
+++ b/configuration/application.conf
@@ -3,4 +3,4 @@ port = 2717
 host = 0.0.0.0
 
 [MONGO_DB]
-uri = "mongodb://intern_23:intern%40123@192.168.0.220:2717/interns_b2_23"
+uri = "mongodb://intern_23:intern%%40123@192.168.0.220:2717/interns_b2_23"
