--- a/configuration/application.conf
+++ b/configuration/application.conf
@@ -1,6 +1,10 @@
 [SERVICE]
-port = 2717
-host = 0.0.0.0
+PORT = 2717
+HOST = 127.0.0.1
+
 
 [MONGO_DB]
-uri = "mongodb://intern_23:intern%%40123@192.168.0.220:2717/interns_b2_23"
+URI = "mongodb://intern_23:intern"
+URI1 = "40123@192.168.0.220:2717/interns_b2_23"
+PORT = 2717
+HOST = 192.168.0.220
